--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <div class="color-box" id="color2"></div>
     <div class="color-box" id="color3"></div>
     <div class="color-box" id="color4"></div>
+    <div class="hex" id="hex1"></div>
+    <div class="hex" id="hex2"></div>
+    <div class="hex" id="hex3"></div>
+    <div class="hex" id="hex4"></div>
+
     <button id="generate">Generate Colors</button>
   </div>
   <script src="script.js"></script>
