--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button id="theme-toggle">Toggle Theme</button>
   <div class="palette-container">
     <div class="color-box" id="color1"></div>
     <div class="color-box" id="color2"></div>
@@ -16,7 +17,6 @@
     <div class="hex" id="hex2"></div>
     <div class="hex" id="hex3"></div>
     <div class="hex" id="hex4"></div>
-
     <button id="generate">Generate Colors</button>
   </div>
   <script src="script.js"></script>
